--- a/mainstyle.css
+++ b/mainstyle.css
@@ -1,157 +1,478 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
 }
 
 .container{
-    max-width: 1140px;
-    margin: 0 auto;
+   max-width: 1140px;
+   margin: 0 auto;
 }
 
 nav{
-    padding: 1rem;
-    background-color: rgb(255, 175, 192);
+   padding: 1rem;
+   
 }
 
 .nav-con{
-    display: flex;
-    justify-content: space-between;
+   display: flex;
+   justify-content: space-between;
 }
 
 
 
 .logo a{
-    font-size: 2rem;
-    color: aliceblue;
-    text-decoration: none;
-    
+   font-size: 2rem;
+   color: aliceblue;
+   text-decoration: none;
+   
 }
 
 .menu {
- display: flex;
- list-style: none;
- align-items: center;
+display: flex;
+list-style: none;
+align-items: center;
 }
 
 .menu li {
- margin: 0 1rem ;
+margin: 0 1rem ;
 }
 
 .menu li a {
- color: aliceblue;
+color: aliceblue;
 text-decoration: none;
 }
 
 .maincontent-con{
-    display: flex;
+   display: flex;
 }
 .maincontent-info{
-    width: 100%;
-    padding: 2rem;
+   width: 100%;
+   padding: 2rem;
 }
 
 .maincontent-img img{
-    width: 100%;
+   width: 100%;
 }
 
- .maincontent-info h3{
-    font-size: 2rem;
-    color: #ffffff;
- }
+.maincontent-info h3{
+   font-size: 2rem;
+   color: #ffffff;
+}
 
- .maincontent-info p{
-    margin: 1rem 0;
- }
+.maincontent-info p{
+   margin: 1rem 0;
+}
 
- .maincontent-info .maincontent-btn{
-    background-color: #ffa43d;
-    color: aliceblue;
-    padding: 1rem;
-    border-radius: 5px;
-    text-decoration: none;
- }
+.maincontent-info .maincontent-btn{
+   background-color: #ffa43d;
+   color: aliceblue;
+   padding: 1rem;
+   border-radius: 5px;
+   text-decoration: none;
+}
 
- .maincontent-img{
-    width: 100%;
-    padding: 2rem;
- }
+.slideshow-container{
+   width: 85%;
+   padding: 1rem;
+   max-width: 1000px;
+   position: relative;
+   margin: auto;
+}
 
- .content-con{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 2rem;
- }
+.content-con{
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
+   column-gap: 2rem;
+}
 
- .content-title{
-    margin: 2rem 0;
- }
- .content-item img{
-    width: 70%;
-    
- }
+.content-title{
+   margin: 2rem 0;
+}
+.content-item img{
+   width: 70%;
+   
+}
 
- .content-item h4{
-    margin-top: 1rem;
-    color: #ffffff;
+.content-item h4{
+   position: relative;
+   left: 89px;
+   margin-top: 0.5rem;
+   color: #ffffff;
 
- }
+}
 
- .content-title{
-    margin-top: 1rem;
-    padding: 0.1rem 1rem;
-    color: #ffffff;
-    text-align: center;
-    background-color: #ffa43d
+.content-title{
+   margin-top: 1rem;
+   padding: 0.1rem 1rem;
+   color: #ffffff;
+   text-align: center;
+   background-color: #ffa43d
 
-    
- }
- .content-item p{
-    margin: 1rem 0;
- }
+   
+}
+.content-item p{
+   margin: 1rem 0;
+}
 
- .content-item a{
-    display: inline-block;
-    color: #ffffff;
-    background-color: #ffa43d;
-    padding: 0.5rem 1rem;
-    border-radius: 7px;
-    text-decoration: none;
- }
+.content-item a{
+   position: relative;
+   left: 89px;
+   display: inline-block;
+   color: #ffffff;
+   background-color: #ffa43d;
+   padding: 0.5rem 0.5rem;
+   border-radius: 7px;
+   text-decoration: none;
+}
 
- .footer-top{
-    margin-top: 2rem;
-    padding: 3rem;
-    background-color: #c20602;
-    color: #ffffff;
- }
- 
- .footer-top-con{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
-    column-gap: 2rem;
- }
+.footer-top{
+   margin-top: 2rem;
+   padding: 3rem;
+   background-color: #26484f;
+   color: #ffffff;
+}
 
- .footer-top-item-con{
-    display: flex;
-    margin: 1rem 0;
- }
- .footer-top-item-con .date{
-    background-color: #ffffff;
-    color: black;
-    padding: 0.5rem;
-    border-radius: 5px;
-    text-align: center;
-    margin-right: 10px;
- }
+.footer-top-con{
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr ;
+   column-gap: 2rem;
+}
+
+.footer-top-item-con{
+   display: flex;
+   margin: 1rem 0;
+}
+.footer-top-item-con .date{
+   background-color: #ffffff;
+   color: black;
+   padding: 0.5rem;
+   border-radius: 5px;
+   text-align: center;
+   margin-right: 10px;
+}
 
 .footer-top-item:nth-child(2) h4,
 .footer-top-item:nth-child(3) h4 {
-    margin-bottom: 1rem;
+   margin-bottom: 1rem;
 }
 
 .footer-buttom{
-    background-color: #ffa43d;
-    padding: 0.5rem;
-    text-align: center;
+   background-color: #ffa43d;
+   padding: 0.5rem;
+   text-align: center;
+}
+
+nav a:hover {
+   background-color: #ffafc0;
+   color: black;
+}
+
+.slideshow-container {
+   max-width: 1000px;
+   position: relative;
+   margin: auto;
+ }
+
+ .text {
+   color: #f2f2f2;
+   font-size: 15px;
+   padding: 8px 12px;
+   position: absolute;
+   bottom: 8px;
+   width: 100%;
+   text-align: center;
+ }
+
+ .numbertext {
+   color: #f2f2f2;
+   font-size: 12px;
+   padding: 8px 12px;
+   position: absolute;
+   top: 0;
+ }
+
+ .dot {
+   height: 10px;
+   width: 10px;
+   margin: 0 3px;
+   position: relative;
+   left: 400px;
+   background-color: #bbb;
+   border-radius: 50%;
+   display: inline-block;
+   transition: background-color 0.6s ease;
+ }
+
+ .active {
+   background-color: #717171;
+ }
+
+ .fade {
+   animation-name: fade;
+   animation-duration: 1.5s;
+ }
+ @keyframes fade {
+   from {opacity: .4} 
+   to {opacity: 1}
+ }
+ 
+ /* On smaller screens, decrease text size */
+ @media only screen and (max-width: 300px) {
+   .text {font-size: 11px}
+ }
+ 
+
+/* The Overlay (background) */
+.overlay {
+  /* Height & width depends on how you want to reveal the overlay (see JS below) */   
+  height: 100%;
+  width: 0;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  background-color: rgb(0,0,0); /* Black fallback color */
+  background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+}
+
+/* Position the content inside the overlay */
+.overlay-content {
+  position: relative;
+  top: 25%; /* 25% from the top */
+  width: 100%; /* 100% width */
+  text-align: center; /* Centered text/links */
+  margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+}
+
+/* The navigation links inside the overlay */
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block; /* Display block instead of inline */
+  transition: 0.3s; /* Transition effects on hover (color) */
+}
+
+/* When you mouse over the navigation links, change their color */
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+/* Position the close button (top right corner) */
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+
+/* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+
+/* Slideshow container */
+.slideshow-container2 {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+
+
+/* Slideshow container */
+.slideshow-container {
+   max-width: 1000px;
+   position: relative;
+   margin: auto;
+ }
+ 
+ /* Caption text */
+ .text {
+   color: #f2f2f2;
+   font-size: 15px;
+   padding: 8px 12px;
+   position: absolute;
+   bottom: 8px;
+   width: 100%;
+   text-align: center;
+ }
+ 
+ /* Number text (1/3 etc) */
+ .numbertext {
+   color: #f2f2f2;
+   font-size: 12px;
+   padding: 8px 12px;
+   position: absolute;
+   top: 0;
+ }
+ 
+ /* The dots/bullets/indicators */
+ .dot {
+   height: 15px;
+   width: 15px;
+   margin: 0 2px;
+   background-color: #bbb;
+   border-radius: 50%;
+   display: inline-block;
+   transition: background-color 0.6s ease;
+ }
+ 
+ .active {
+   background-color: #717171;
+ }
+ 
+ /* Fading animation */
+ .fade {
+   animation-name: fade;
+   animation-duration: 1.5s;
+ }
+ 
+ @keyframes fade {
+   from {opacity: .4} 
+   to {opacity: 1}
+ }
+ 
+ /* On smaller screens, decrease text size */
+ @media only screen and (max-width: 300px) {
+   .text {font-size: 11px}
+ }
+.content-menu{
+   position: relative;
+   left: 500px;
+   display: inline-block;
+   color: #ffffff;
+   background-color: #ffa43d;
+   padding: 0.5rem 0.5rem;
+   border-radius: 7px;
+   text-decoration: none;
+}
+
+.content-open{
+   position: relative;
+   left: -390px;
+   display: inline-block;
+   color: #ffffff;
+   background-color: #ffa43d;
+   padding: 1rem 1rem;
+   border-radius: 7px;
+   text-decoration: none;
+   
 }
