--- a/mainstyle.css
+++ b/mainstyle.css
@@ -599,7 +599,7 @@ nav span:hover {
   top: 130px;
   display: inline-block;
   color: #ffffff;
-  background-color: #226A5E;
+  background-color: #206d60;
   padding: 1rem 5rem;
   border-radius: 7px;
   text-decoration: none;
