--- a/mainstyle.css
+++ b/mainstyle.css
@@ -1,381 +1,447 @@
 *{
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .container{
-   max-width: 1140px;
-   margin: 0 auto;
+  max-width: 1140px;
+  margin: 0 auto;
 }
 
 
 nav{
-   padding: 1rem;
-   
+  padding: 1rem;
+  
 }
 
 
 .nav-con{
-   display: flex;
-   justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1rem;
 }
 
 .logo a{
-   font-size: 2rem;
-   color: aliceblue;
-   text-decoration: none;
-   
+  font-size: 2rem;
+  color: aliceblue;
+  text-decoration: none;
+  
 }
 
 .menu {
 display: flex;
 list-style: none;
-align-items: center;
+
 }
 
 .menu li {
-margin: 0 1.1rem ;
+margin: 1rem ;
 }
 
 .menu span{
-  color: #f0f8ff;
+ color: #f0f8ff;
 }
 
 
 .menu li a {
 color: #f0f8ff;
 text-decoration: none;
+padding: 0.5rem 1rem;
+  border-radius: 5px;
+  transition: background 0.3s;
 }
 .maincontent-con{
-   display: flex;
+  display: flex;
 }
 .maincontent-info{
-   width: 100%;
-   padding: 2rem;
+  width: 100%;
+  padding: 2rem;
 }
 
 .maincontent-img img{
-   width: 100%;
+  width: 100%;
 }
 
 .maincontent-info h3{
-   font-size: 2rem;
-   color: #ffffff;
+  font-size: 2rem;
+  color: #ffffff;
 }
 
 .maincontent-info p{
-   margin: 1rem 0;
+  margin: 1rem 0;
 }
 
 .maincontent-info .maincontent-btn{
-   background-color: #ffa43d;
-   color: aliceblue;
-   padding: 1rem;
-   border-radius: 5px;
-   text-decoration: none;
+  background-color: #ffa43d;
+  color: aliceblue;
+  padding: 1rem;
+  border-radius: 5px;
+  text-decoration: none;
 }
 
 
 
 
 .slideshow-container{
-   width: 85%;
-   padding: 1rem;
-   max-width: 1000px;
-   position: relative;
-   margin: auto;
+  width: 85%;
+  padding: 1rem;
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
 }
 
 .content-con{
-   display: grid;
-   grid-template-columns: 1fr 1fr 1fr;
-   column-gap: 2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 2rem;
 }
 
 .content-title{
-   margin: 2rem 0;
+  margin: 2rem 0;
 }
 .content-item img{
-   width: 70%;
-   
+  width: 70%;
+  
 }
 
 /*ข้อความใต้รูปหน้าหลัก ปิดไว้
 .content-item h4{
-   position: relative;
-   
-   margin-top: 0.5rem;
-   color: #ffffff;
+  position: relative;
+  
+  margin-top: 0.5rem;
+  color: #ffffff;
 
 }*/
 
 .content-title{
-   margin-top: 1rem;
-   padding: 0.1rem 1rem;
-   color: #ffffff;
-   text-align: center;
-   background-color: #ffa43d
+  margin-top: 1rem;
+  padding: 0.1rem 1rem;
+  color: #ffffff;
+  text-align: center;
+  background-color: #ffa43d
 
-   
+  
 }
 .content-item p{
-   margin: 1rem 0;
+  margin: 1rem 0;
 }
 
 .content-item a{
-   position: relative;
-   left: 160px;
-   display: inline-block;
-   color: #ffffff;
-   background-color: #ffa43d;
-   padding: 0.5rem 0.5rem;
-   border-radius: 7px;
-   text-decoration: none;
-}
-.content-item2 a{
-  position: relative;top: 30px;
-  left: 30px;
+  position: relative;
+  left: 160px;
   display: inline-block;
   color: #ffffff;
-  background-color: #26484f;
+  background-color: #ffa43d;
   padding: 0.5rem 0.5rem;
   border-radius: 7px;
   text-decoration: none;
 }
+.content-item2 a{
+ position: relative;top: 30px;
+ left: 30px;
+ display: inline-block;
+ color: #ffffff;
+ background-color: #26484f;
+ padding: 0.5rem 0.5rem;
+ border-radius: 7px;
+ text-decoration: none;
+}
 .footer-top{
-   margin-top: 5rem;
-   padding: 2.5rem;
-   background-color: #26484f;
-   color: #ffffff;
+  margin-top: 5rem;
+  padding: 2.5rem;
+  background-color: #26484f;
+  color: #ffffff;
 }
 
 .footer-top-con{
-   display: grid;
-   grid-template-columns: 1fr 1fr 1fr 1fr;
-   column-gap: 6rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  column-gap: 6rem;
 }
 
 .footer-top-item-con{
-   display: flex;
-   margin: 1rem 0;
+  display: flex;
+  margin: 1rem 0;
 }
 
 .footer-top-item .discord a{
-  color: #ffffff;
+ color: #ffffff;
 
 }
 
 #myImg1 {
-  border-radius: 20px;
-  cursor: pointer;
-  transition: 0.3s;
+ border-radius: 20px;
+ cursor: pointer;
+ transition: 0.3s;
 }
 
 
 .footer-top-item-con .date{
-  padding: 0.1rem;
-  border-radius: 5px;
-  text-align: center;
-  margin-right: 10px;
+ padding: 0.1rem;
+ border-radius: 5px;
+ text-align: center;
+ margin-right: 10px;
 }
 
 
 .footer-top-item:nth-child(2) h4,
 .footer-top-item:nth-child(3) h4 {
-   margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .footer-buttom{
-   background-color: #ffa43d;
-   padding: 0.5rem;
-   text-align: center;
+  background-color: #ffa43d;
+  padding: 0.5rem;
+  text-align: center;
 }
 
-nav-menu a:hover {
-   
-  color: #e0e0e0;
+.nav-con a:hover {
+  
+ color: #26484f;
 }
 
 
 
 nav span:hover {
-   
-  color: #26484f;
+  
+ color: #26484f;
 }
 
 .slideshow-container {
-   max-width: 1000px;
-   position: relative;
-   margin: auto;
- }
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
 
- .text {
-   color: #f2f2f2;
-   font-size: 15px;
-   padding: 8px 12px;
-   position: absolute;
-   bottom: 8px;
-   width: 100%;
-   text-align: center;
- }
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
 
- .numbertext {
-   color: #f2f2f2;
-   font-size: 12px;
-   padding: 8px 12px;
-   position: absolute;
-   top: 0;
- }
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
 
- .dot {
-   height: 10px;
-   width: 10px;
-   margin: 0 3px;
-   position: relative;
-   left: 400px;
-   background-color: #bbb;
-   border-radius: 50%;
-   display: inline-block;
-   transition: background-color 0.6s ease;
- }
+.dot {
+  height: 10px;
+  width: 10px;
+  margin: 0 3px;
+  position: relative;
+  left: 400px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
 
- .active {
-   background-color: #717171;
- }
+.active {
+  background-color: #717171;
+}
 
- .fade {
-   animation-name: fade;
-   animation-duration: 1.5s;
- }
- @keyframes fade {
-   from {opacity: .4} 
-   to {opacity: 1}
- }
- 
- /* On smaller screens, decrease text size */
- @media only screen and (max-width: 300px) {
-   .text {font-size: 11px}
- }
- 
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+
 
 /* The Overlay (background) */
 .overlay {
-  /* Height & width depends on how you want to reveal the overlay (see JS below) */   
-  height: 100%;
-  width: 0;
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  background-color: rgb(0,0,0); /* Black fallback color */
-  background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
-  overflow-x: hidden; /* Disable horizontal scroll */
-  transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+ /* Height & width depends on how you want to reveal the overlay (see JS below) */   
+ height: 100%;
+ width: 0;
+ position: fixed; /* Stay in place */
+ z-index: 1; /* Sit on top */
+ left: 0;
+ top: 0;
+ background-color: rgb(0,0,0); /* Black fallback color */
+ background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
+ overflow-x: hidden; /* Disable horizontal scroll */
+ transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
 }
 
 /* Position the content inside the overlay */
 .overlay-content {
-  position: relative;
-  top: 25%; /* 25% from the top */
-  width: 100%; /* 100% width */
-  text-align: center; /* Centered text/links */
-  margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+ position: relative;
+ top: 25%; /* 25% from the top */
+ width: 100%; /* 100% width */
+ text-align: center; /* Centered text/links */
+ margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
 }
 
 /* The navigation links inside the overlay */
 .overlay a {
-  padding: 8px;
-  text-decoration: none;
-  font-size: 36px;
-  color: #818181;
-  display: block; /* Display block instead of inline */
-  transition: 0.3s; /* Transition effects on hover (color) */
+ padding: 8px;
+ text-decoration: none;
+ font-size: 36px;
+ color: #818181;
+ display: block; /* Display block instead of inline */
+ transition: 0.3s; /* Transition effects on hover (color) */
 }
 
 /* When you mouse over the navigation links, change their color */
 .overlay a:hover, .overlay a:focus {
-  color: #f1f1f1;
+ color: #f1f1f1;
 }
 
 /* Position the close button (top right corner) */
 .overlay .closebtn {
-  position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
+ position: absolute;
+ top: 20px;
+ right: 45px;
+ font-size: 60px;
 }
 
 /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
 @media screen and (max-height: 450px) {
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
-  }
+ .overlay a {font-size: 20px}
+ .overlay .closebtn {
+   font-size: 40px;
+   top: 15px;
+   right: 35px;
+ }
 }
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+ max-width: 1000px;
+ position: relative;
+ margin: auto;
 }
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+ color: #f2f2f2;
+ font-size: 15px;
+ padding: 8px 12px;
+ position: absolute;
+ bottom: 8px;
+ width: 100%;
+ text-align: center;
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+ color: #f2f2f2;
+ font-size: 12px;
+ padding: 8px 12px;
+ position: absolute;
+ top: 0;
 }
 
 /* The dots/bullets/indicators */
 .dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+ height: 15px;
+ width: 15px;
+ margin: 0 2px;
+ background-color: #bbb;
+ border-radius: 50%;
+ display: inline-block;
+ transition: background-color 0.6s ease;
 }
 
 .active {
-  background-color: #717171;
+ background-color: #717171;
 }
 
 /* Fading animation */
 .fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
+ animation-name: fade;
+ animation-duration: 1.5s;
 }
 
 @keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+ from {opacity: .4} 
+ to {opacity: 1}
 }
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
+ .text {font-size: 11px}
 }
 
 /* Slideshow container */
 .slideshow-container2 {
+ max-width: 1000px;
+ position: relative;
+ margin: auto;
+}
+
+/* Caption text */
+.text {
+ color: #f2f2f2;
+ font-size: 15px;
+ padding: 8px 12px;
+ position: absolute;
+ bottom: 8px;
+ width: 100%;
+ text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+ color: #f2f2f2;
+ font-size: 12px;
+ padding: 8px 12px;
+ position: absolute;
+ top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+ height: 15px;
+ width: 15px;
+ margin: 0 2px;
+ background-color: #bbb;
+ border-radius: 50%;
+ display: inline-block;
+ transition: background-color 0.6s ease;
+}
+
+.active {
+ background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+ animation-name: fade;
+ animation-duration: 1.5s;
+}
+
+@keyframes fade {
+ from {opacity: .4} 
+ to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+ .text {font-size: 11px}
+}
+
+
+/* Slideshow container */
+.slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
@@ -431,179 +497,120 @@ nav span:hover {
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
 }
-
-
-/* Slideshow container */
-.slideshow-container {
-   max-width: 1000px;
-   position: relative;
-   margin: auto;
- }
- 
- /* Caption text */
- .text {
-   color: #f2f2f2;
-   font-size: 15px;
-   padding: 8px 12px;
-   position: absolute;
-   bottom: 8px;
-   width: 100%;
-   text-align: center;
- }
- 
- /* Number text (1/3 etc) */
- .numbertext {
-   color: #f2f2f2;
-   font-size: 12px;
-   padding: 8px 12px;
-   position: absolute;
-   top: 0;
- }
- 
- /* The dots/bullets/indicators */
- .dot {
-   height: 15px;
-   width: 15px;
-   margin: 0 2px;
-   background-color: #bbb;
-   border-radius: 50%;
-   display: inline-block;
-   transition: background-color 0.6s ease;
- }
- 
- .active {
-   background-color: #717171;
- }
- 
- /* Fading animation */
- .fade {
-   animation-name: fade;
-   animation-duration: 1.5s;
- }
- 
- @keyframes fade {
-   from {opacity: .4} 
-   to {opacity: 1}
- }
- 
- /* On smaller screens, decrease text size */
- @media only screen and (max-width: 300px) {
-   .text {font-size: 11px}
- }
 .content-menu1{
-   position: relative;top: -390px;
-   left: 530px;
-   display: inline-block;
-   color: #ffffff;
-   background-color: #ffafba90;
-   padding: 0.5rem 0.5rem;
-   border-radius: 7px;
-   text-decoration: none;
+  position: relative;top: -390px;
+  left: 530px;
+  display: inline-block;
+  color: #ffffff;
+  background-color: #ffafba90;
+  padding: 0.5rem 0.5rem;
+  border-radius: 7px;
+  text-decoration: none;
 }
 
 .content-menu2{
-  position: relative;
-  left: 300px;
-  display: inline-block;
-  color: #ffffff;
-  background-color: #ffafba90;
-  padding: 0.5rem 0.5rem;
-  border-radius: 7px;
-  text-decoration: none; 
+ position: relative;
+ left: 300px;
+ display: inline-block;
+ color: #ffffff;
+ background-color: #ffafba90;
+ padding: 0.5rem 0.5rem;
+ border-radius: 7px;
+ text-decoration: none; 
 }
 
 .content-menu3{
-  position: relative;
-  left: 300px;
-  display: inline-block;
-  color: #ffffff;
-  background-color: #ffafba90;
-  padding: 0.5rem 0.5rem;
-  border-radius: 7px;
-  text-decoration: none; 
+ position: relative;
+ left: 300px;
+ display: inline-block;
+ color: #ffffff;
+ background-color: #ffafba90;
+ padding: 0.5rem 0.5rem;
+ border-radius: 7px;
+ text-decoration: none; 
 }
 
 .content-menu4{
-  position: relative;
-  left: 300px;
-  display: inline-block;
-  color: #ffffff;
-  background-color: #ffafba90;
-  padding: 0.5rem 0.5rem;
-  border-radius: 7px;
-  text-decoration: none; 
+ position: relative;
+ left: 300px;
+ display: inline-block;
+ color: #ffffff;
+ background-color: #ffafba90;
+ padding: 0.5rem 0.5rem;
+ border-radius: 7px;
+ text-decoration: none; 
 }
 
 .content-menu5{
-  position: relative;
-  left: 300px;
-  display: inline-block;
-  color: #ffffff;
-  background-color: #ffafba90;
-  padding: 0.5rem 0.5rem;
-  border-radius: 7px;
-  text-decoration: none; 
+ position: relative;
+ left: 300px;
+ display: inline-block;
+ color: #ffffff;
+ background-color: #ffafba90;
+ padding: 0.5rem 0.5rem;
+ border-radius: 7px;
+ text-decoration: none; 
 }
 
 .content-open{
-   position: relative; top: -390px;
-   left: -350px;
-   display: inline-block;
-   color: #ffffff;
-   padding: 1rem 1rem;
-   border-radius: 7px;
-   text-decoration: none;
-   
+  position: relative; top: -390px;
+  left: -350px;
+  display: inline-block;
+  color: #ffffff;
+  padding: 1rem 1rem;
+  border-radius: 7px;
+  text-decoration: none;
+  
 }
 
 .content-open2{
-  position: relative; top:-20px;
-   left: 10px;
-   display: inline-block;
-   color: #ffffff;
-   padding: 0.2rem 0.2rem;
-   border-radius: 7px;
-   text-decoration: none;
+ position: relative; top:-20px;
+  left: 10px;
+  display: inline-block;
+  color: #ffffff;
+  padding: 0.2rem 0.2rem;
+  border-radius: 7px;
+  text-decoration: none;
 }
 
 .content-open3{
-  position: relative; top:-20px;
-   left: 10px;
-   display: inline-block;
-   color: #ffffff;
-   padding: 0.5rem 0.5rem;
-   border-radius: 7px;
-   text-decoration: none;
+ position: relative; top:-20px;
+  left: 10px;
+  display: inline-block;
+  color: #ffffff;
+  padding: 0.5rem 0.5rem;
+  border-radius: 7px;
+  text-decoration: none;
 }
 
 .content-open4{
-  position: relative; top:-20px;
-   left: 10px;
-   display: inline-block;
-   color: #ffffff;
-   padding: 0.5rem 0.5rem;
-   border-radius: 7px;
-   text-decoration: none;
+ position: relative; top:-20px;
+  left: 10px;
+  display: inline-block;
+  color: #ffffff;
+  padding: 0.5rem 0.5rem;
+  border-radius: 7px;
+  text-decoration: none;
 }
 
 .content-open5{
-  position: relative; top:-20px;
-   left: 10px;
-   display: inline-block;
-   color: #ffffff;
-   padding: 0.5rem 0.5rem;
-   border-radius: 7px;
-   text-decoration: none;
-}
-.content-price{
-  position: relative;
-  left:-130px;
-  top: 130px;
+ position: relative; top:-20px;
+  left: 10px;
   display: inline-block;
   color: #ffffff;
-  background-color: #206d60;
-  padding: 1rem 5rem;
+  padding: 0.5rem 0.5rem;
   border-radius: 7px;
   text-decoration: none;
+}
+.content-price{
+ position: relative;
+ left:-130px;
+ top: 130px;
+ display: inline-block;
+ color: #ffffff;
+ background-color: #206d60;
+ padding: 1rem 5rem;
+ border-radius: 7px;
+ text-decoration: none;
 }
 
